text alignment fix

--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,8 @@
   left: 50%;
   right: 50%;
   transform: translateX(-50%);
-  z-index: 1
+  z-index: 1;
+  text-align: justify;
 }
 
 .about-me-info p {
@@ -47,6 +48,7 @@
   .about-me-info {
     position: relative;
     top: -35px;
+    padding: 25px;
   }
 }
 
@@ -58,5 +60,6 @@
   .about-me-info {
     position: relative;
     top: -15px;
+    padding: 15px;
   }
 }
